# Ipa-tts-implementation

./: .codereview.md  .gitignore  Makefile  README.md  api_validation_report.md  docker-compose.yml  prd.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: golden.yml
artifacts/: golden_baseline.json
ci/: Dockerfile.golden
pronouncex/: __init__.py
pronouncex-tts/: README.md  docker-compose.yml  requirements.txt
pronouncex-tts/api/: app.py
pronouncex-tts/core/: arpabet_convert.py  cache.py  chunking.py  config.py  encode.py  fallback_cmudict.py  fallback_espeak.py  ipa_compile.py  jobs.py  learner.py  metrics.py  normalize.py  redis_client.py  redis_locks.py  redis_queue.py  redis_store.py  resolver.py  synth.py  worker_main.py
pronouncex-tts/docker/: Dockerfile
pronouncex-tts/scripts/: benchmark_models.py  smoke_test.py
pronouncex-tts/tests/: test_api_no_blpop.py  test_api_queue_stays_queued.py  test_chunking.py  test_chunking_min_segment.py  test_dicts_override.py  test_jobs.py  test_manifest_phoneme_fields.py  test_models_allowlist.py  test_phonemize_endpoint.py  test_promote_endpoint.py  test_reader_audio_playlist.py  test_redis_lock.py  (+5 more)
samples/: long.txt
scripts/: bench_models.py  benchmark_models.py  dev_up.sh  e2e_range_test.sh  e2e_sequential_test.py  golden_regression.py  golden_run.sh  list_coqui_models.py  load_test.py  local_scale.sh  prefetch_models.py  redis_health.sh  soak_test.py  start_backend.sh  stop_backend.sh
web/: Dockerfile  README.md  package-lock.json  package.json
(+76 files in other folders)
